Fix footer issues on small view height

--- a/public/src/css/main.scss
+++ b/public/src/css/main.scss
@@ -545,7 +545,8 @@ img {
     .left {
         order: 1; //background: #3d0000;
         flex-basis: 100%;
-        height: 100%
+        height: 100%;
+        max-height: 75vh;
     }
     .right {
         order: 2; //background: #6d6d00;
@@ -631,7 +632,7 @@ footer {
     margin-right: auto;
     font-family: 'Muli', sans-serif;
     padding-bottom: 0em;
-    padding-top: 45em;
+    padding-top: 5em;
     .footer-content {
         flex-wrap: wrap;
         white-space: nowrap;
@@ -872,12 +873,6 @@ footer {
         }
     }
     footer {
-        background-image: url('../../assets/Footer/Mask\ Group\ 2.svg');
-        background-position: bottom right;
-        background-repeat: no-repeat;
-        background-size: contain;
-        padding-bottom: 2em;
-        padding-top: 5em;
         a {
             margin-left: 1em !important;
             margin-right: 1em !important;
